GUI + Database + name matching partial/fuzzy